--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,34 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="w-full">
+  <div class="w-full flex bg-color-blue h-[50px] text-white px-3 gap-[30%] py-3 md:px-[5%] md:gap-[45%]">
+    <a href="<%= request.referer %>" class="focus:ring-gray-300 focus:ring-2"><i class="fa-solid fa-arrow-left md:text-2xl text-xl"></i></a>
+    <h2>REGISTRATION</h2>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <div class="field md:w-[50%] mx-auto relative h-[70px] mt-5 px-4 border-t-2 border-gray-300 py-2 bg-white">
+      <%= f.file_field :photo, autofocus: true, class: "w-full mt-5 h-[50px] absolute top-0 left-0 opacity-0" %>
+      <i class="fa-solid fa-circle-user text-5xl text-gray-400"></i>
+      <span class="text-xl text-gray-400 -mt-[40px] ml-[17%] block">Upload picture</span>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field md:w-[50%] mx-auto">
+      <%= f.text_field :name, autofocus: true, placeholder: "Full name", class: "w-full h-[50px]" %>
+    </div>
+    
+    <div class="field md:w-[50%] mx-auto">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "w-full h-[50px]" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="field md:w-[50%] mx-auto">
+      <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "w-full h-[50px]" %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="actions -mt-[285px] ml-[88%] py-2">
+      <%= f.submit "Next", class: "text-white" %>
+    </div>
+    <div class="px-5 text-red-500 md:w-[50%] mx-auto mt-[250px]">
+      <%= render "devise/shared/error_messages", resource: resource %>
+    </div>
+  <% end %>
+</div>
+
