Implement the transactions page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="w-full">
   <div class="w-full flex bg-color-blue h-[50px] text-white px-3 gap-[30%] py-3 md:px-[5%] md:gap-[45%]">
-    <a href="<%= request.referer %>" class="focus:ring-gray-300 focus:ring-2"><i class="fa-solid fa-arrow-left md:text-2xl text-xl"></i></a>
+    <a href="<%= root_path %>" class="focus:ring-gray-300 focus:ring-2"><i class="fa-solid fa-arrow-left md:text-2xl text-xl"></i></a>
     <h2>REGISTRATION</h2>
   </div>
 
