--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -18,6 +18,6 @@
       <span class="block mt-3"><%= render partial: 'shared/transaction_card', locals: {entity: entity} %></span>
     <% end %>
   </div>
-    <%= link_to 'Add a new transaction', new_group_path, class: "text-white bg-color-green hover:bg-color-gray focus:outline-none focus:ring-4 focus:ring-gray-300 text-xl px-3.5 py-2.5 block mt-5 w-[210px] mx-auto" %>
+    <%= link_to 'Add a new transaction', new_group_entity_path(params[:id]), class: "text-white bg-color-green hover:bg-color-gray focus:outline-none focus:ring-4 focus:ring-gray-300 text-xl px-3.5 py-2.5 block mt-5 w-[210px] mx-auto" %>
 </div>
 
