--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,8 +1,10 @@
 <div>
-  <div class=" text-xl w-full flex bg-color-blue h-[50px] text-white px-3 gap-[30%] py-3 md:px-[5%] md:gap-[45%]">
-    
+  <div class="w-full flex bg-color-blue md:h-[50px] h-[100px] text-white px-3 py-3 md:px-[5%] items-center">
     <a href="<%= groups_path %>"><i class="fa-solid fa-arrow-left md:text-2xl text-xl"></i></a>
-    <h2>TRANSACTIONS</h2>
+    <h2 class="ml-[20%] md:ml-[45%] w-[200px]">TRANSACTIONS</h2>
+    <span class = "text-white hover:bg-color-gray rounded-lg text-lg text-center h-[30px] w-[80px] ml-[5%] md:ml-[35%]">
+      <%= link_to "Log out", destroy_user_session_path, data: { "turbo-method": :delete } if user_signed_in? %>
+    </span>
   </div>
   <div class="w-full bg-white h-[50px] flex justify-between px-5 py-3 text-xl md:block gap-5 md:pl-[80%]">
     <span class="text-color-gray">Total Amount</span>
