--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -13,5 +13,5 @@
 */
 @font-face {
   font-family: proxima;
-  src: url("../fonts/ProximaNova-Regular.otf") format("opentype");
+  src: url("/fonts/ProximaNova-Regular.otf") format("opentype");
 }
