--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <div class="w-full flex bg-color-blue md:h-[50px] h-[100px] text-white px-3 py-3 md:px-[5%] items-center">
-    <a href="<%= groups_path %>"><i class="fa-solid fa-arrow-left md:text-2xl text-xl"></i></a>
+    <a href="<%= groups_path %>" id="left-arrow-1"><i class="fa-solid fa-arrow-left md:text-2xl text-xl"></i></a>
     <h2 class="ml-[20%] md:ml-[45%] w-[200px]">TRANSACTIONS</h2>
     <span class = "text-white hover:bg-color-gray rounded-lg text-lg text-center h-[30px] w-[80px] ml-[5%] md:ml-[35%]">
       <%= link_to "Log out", destroy_user_session_path, data: { "turbo-method": :delete } if user_signed_in? %>
@@ -20,6 +20,6 @@
       <span class="block mt-3"><%= render partial: 'shared/transaction_card', locals: {entity: entity} %></span>
     <% end %>
   </div>
-    <%= link_to 'Add a new transaction', new_group_entity_path(params[:id]), class: "text-white bg-color-green hover:bg-color-gray focus:outline-none focus:ring-4 focus:ring-gray-300 text-xl px-3.5 py-2.5 block mt-5 w-[210px] mx-auto" %>
+    <%= link_to 'Add a new transaction', new_group_entity_path(params[:id]), class: "text-white bg-color-green hover:bg-color-gray focus:outline-none focus:ring-4 focus:ring-gray-300 text-xl px-3.5 py-2.5 block mt-5 w-[230px] mx-auto" %>
 </div>
 
