--- a/app/views/entities/new.html.erb
+++ b/app/views/entities/new.html.erb
@@ -1,8 +1,8 @@
 <div class="w-full flex flex-col justify-center items-center mx-auto">
   <div class="w-full flex bg-color-blue md:h-[50px] h-[100px] text-white px-3 py-3 md:px-[5%] items-center">
     <a href="<%= group_path(params[:group_id]) %>"><i class="fa-solid fa-arrow-left md:text-2xl text-xl"></i></a>
-    <h2 class="ml-[20%] md:ml-[45%] w-[200px]">ADD TRANSACTION</h2>
-    <span class = "text-white hover:bg-color-gray rounded-lg text-lg text-center h-[30px] w-[80px] ml-[5%] md:ml-[35%]">
+    <h2 class="ml-[20%] md:ml-[35%] w-[200px] whitespace-nowrap">ADD TRANSACTION</h2>
+    <span class = "text-white hover:bg-color-gray rounded-lg text-lg text-center h-[30px] w-[80px] ml-[5%] md:ml-[35%] whitespace-nowrap">
       <%= link_to "Log out", destroy_user_session_path, data: { "turbo-method": :delete } if user_signed_in? %>
     </span>
   </div>
