--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -3,7 +3,7 @@
   <div class="w-full flex bg-color-blue md:h-[50px] h-[100px] text-white px-3 py-3 md:px-[5%] items-center">
     <i class="fa-solid fa-bars md:text-2xl text-xl"></i>
     <h2 class="ml-[35%] md:ml-[50%]">HOME</h2>
-    <span class = "text-white hover:bg-color-gray rounded-lg text-lg text-center h-[30px] w-full ml-[22%] md:ml-[40%]">
+    <span class = "text-white hover:bg-color-gray rounded-lg text-lg text-center h-[30px] w-full ml-[22%] md:ml-[35%] whitespace-nowrap">
       <%= link_to "Log out", destroy_user_session_path, data: { "turbo-method": :delete } if user_signed_in? %>
     </span>
   </div>
