--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,11 +2,11 @@
   <div class="w-full flex bg-color-blue md:h-[50px] h-[100px] text-white px-3 py-3 md:px-[5%] items-center">
     <a href="<%= groups_path %>" id="left-arrow-1"><i class="fa-solid fa-arrow-left md:text-2xl text-xl"></i></a>
     <h2 class="ml-[20%] md:ml-[45%] w-[200px]">TRANSACTIONS</h2>
-    <span class = "text-white hover:bg-color-gray rounded-lg text-lg text-center h-[30px] w-[80px] ml-[5%] md:ml-[35%]">
+    <span class = "text-white hover:bg-color-gray text-lg text-center h-[30px] w-[80px] ml-[5%] md:ml-[30%] whitespace-nowrap">
       <%= link_to "Log out", destroy_user_session_path, data: { "turbo-method": :delete } if user_signed_in? %>
     </span>
   </div>
-  <div class="w-full bg-white h-[50px] flex justify-between px-5 py-3 text-xl md:block gap-5 md:pl-[80%]">
+  <div class="w-full bg-white h-[50px] flex justify-between px-5 py-3 text-xl md:block gap-5 md:pl-[78%] whitespace-nowrap">
     <span class="text-color-gray">Total Amount</span>
     <% total_amount = 0 %>
     <% @group_entities.each do |entity| %>
