--- a/app/views/entities/new.html.erb
+++ b/app/views/entities/new.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full flex flex-col justify-center items-center mx-auto">
   <div class="w-full flex bg-color-blue md:h-[50px] h-[100px] text-white px-3 py-3 md:px-[5%] items-center">
     <a href="<%= group_path(params[:group_id]) %>"><i class="fa-solid fa-arrow-left md:text-2xl text-xl"></i></a>
-    <h2 class="ml-[20%] md:ml-[35%] w-[200px] whitespace-nowrap">ADD TRANSACTION</h2>
+    <h2 class="ml-[20%] md:ml-[42.5%] w-[200px] whitespace-nowrap">ADD NEW EXPENSE</h2>
     <span class = "text-white hover:bg-color-gray rounded-lg text-lg text-center h-[30px] w-[80px] ml-[5%] md:ml-[35%] whitespace-nowrap">
       <%= link_to "Log out", destroy_user_session_path, data: { "turbo-method": :delete } if user_signed_in? %>
     </span>
@@ -11,7 +11,7 @@
     <%= form_with class:'flex flex-col gap-2 w-[100%] mt-5', model: @entity, url: group_entities_path(params[:group_id]), method: :post do |f| %>
       <%= f.text_field :name, placeholder: 'Transaction name' %>
       <%= f.number_field :amount, placeholder: 'Amount', min: 0 %>
-      <%= f.collection_select :group_ids, current_user.groups.includes(:entities), :id, :name, prompt: 'Select a category' %>
+      <%= f.collection_select :group_ids, @groups, :id, :name, prompt: 'Select a category' %>
       <%= f.submit 'Save',class: "text-white bg-color-green hover:bg-color-gray focus:outline-none focus:ring-4 focus:ring-gray-300 text-xl px-3.5 py-2.5 block mt-5 w-[192px] mx-auto" %>
       <% if flash[:notice] %>
           <div class="notice">
