--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -9,7 +9,15 @@
 
   <div class="mx-auto md:w-[60%] w-[98%]">
     <%= form_with class:'flex flex-col gap-2 w-[100%] mt-5', model: @group, url: { action: "create" }, method: :post do |f| %>
-      <%= f.text_field :name, placeholder: 'Category name' %>
+      
+      <!-- If error, display the error message -->
+      <% if @group.errors.any? %>
+        <div class="text-red-600">
+          <%= @group.errors.full_messages.to_sentence.capitalize %>
+        </div>
+      <% end %>
+
+      <%= f.text_field :name, placeholder: 'Category name', class:'w-full' %>
       <%= f.collection_select(:icon, @icons, :url, :category, prompt: 'Select an icon') %>
       <%= f.submit 'Save',class: "text-white bg-color-green hover:bg-color-gray focus:outline-none focus:ring-4 focus:ring-gray-300 text-xl px-3.5 py-2.5 block mt-5 w-[192px] mx-auto" %>
       <% if flash[:notice] %>
